[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
clap.workspace = true
tokio.workspace = true
k8s = { path = "../k8s" }
provider = { path = "../provider" }
rpc-types-optimism = { path = "../rpc-types-optimism" }
tracing.workspace = true
tracing-subscriber.workspace = true
